RESOLVED FIXED210815
Fix MACCATALYST build failures
https://bugs.webkit.org/show_bug.cgi?id=210815
Summary Fix MACCATALYST build failures
Peng Liu
Reported 2020-04-21 13:51:01 PDT
Fix MACCATALYST build failures
Attachments
Patch (5.25 KB, patch)
2020-04-21 13:56 PDT, Peng Liu
no flags
WIP patch (13.79 KB, patch)
2020-04-21 14:47 PDT, Peng Liu
no flags
Patch (17.60 KB, patch)
2020-04-21 16:02 PDT, Peng Liu
thorton: review+
Patch for landing (12.04 KB, patch)
2020-04-21 17:36 PDT, Peng Liu
no flags
Peng Liu
Comment 1 2020-04-21 13:52:34 PDT
Peng Liu
Comment 2 2020-04-21 13:56:11 PDT
Peng Liu
Comment 3 2020-04-21 14:47:06 PDT
Created attachment 397124 [details] WIP patch
Peng Liu
Comment 4 2020-04-21 16:02:20 PDT
Tim Horton
Comment 5 2020-04-21 17:18:28 PDT
Comment on attachment 397135 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=397135&action=review In the future feel free to land build fixes unreviewed > Tools/TestWebKitAPI/Tests/WebKitCocoa/RequestTextInputContext.mm:550 > - IPhoneUserInterfaceSwizzler userInterfaceSwizzler; > + TestWebKitAPI::IPhoneUserInterfaceSwizzler userInterfaceSwizzler; I think someone else already landed this
Jer Noble
Comment 6 2020-04-21 17:24:25 PDT
View in context: https://bugs.webkit.org/attachment.cgi?id=397135&action=review r=me with just a couple nits. > Source/WebKit/UIProcess/API/ios/WKWebViewIOS.mm:185 > -#if !HAVE(AVKIT) > - return false; > -#else > +#if ENABLE(VIDEO_PRESENTATION_MODE) && !PLATFORM(WATCHOS) > if (!_page || !_page->videoFullscreenManager()) > return false; > > return _page->videoFullscreenManager()->hasMode(WebCore::HTMLMediaElementEnums::VideoFullscreenModePictureInPicture); > +#else > + return false; Nit: I think it's safe to drop the "!PLATFORM(WATCHOS)" part of this if statement. The manager should already handle that watchOS doesn't support PiP. > Tools/TestWebKitAPI/Tests/WebKitCocoa/RequestTextInputContext.mm:550 > - IPhoneUserInterfaceSwizzler userInterfaceSwizzler; > + TestWebKitAPI::IPhoneUserInterfaceSwizzler userInterfaceSwizzler; This shouldn't be needed after r260469.
Peng Liu
Comment 7 2020-04-21 17:27:39 PDT
Comment on attachment 397135 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=397135&action=review >> Tools/TestWebKitAPI/Tests/WebKitCocoa/RequestTextInputContext.mm:550 >> + TestWebKitAPI::IPhoneUserInterfaceSwizzler userInterfaceSwizzler; > > I think someone else already landed this Right. dbates landed a patch to fix it. Will revise the patch to remove my fixes.
Peng Liu
Comment 8 2020-04-21 17:36:42 PDT
Created attachment 397147 [details] Patch for landing
Peng Liu
Comment 9 2020-04-21 17:38:50 PDT
(In reply to Jer Noble from comment #6) > View in context: > https://bugs.webkit.org/attachment.cgi?id=397135&action=review > > r=me with just a couple nits. > > > Source/WebKit/UIProcess/API/ios/WKWebViewIOS.mm:185 > > -#if !HAVE(AVKIT) > > - return false; > > -#else > > +#if ENABLE(VIDEO_PRESENTATION_MODE) && !PLATFORM(WATCHOS) > > if (!_page || !_page->videoFullscreenManager()) > > return false; > > > > return _page->videoFullscreenManager()->hasMode(WebCore::HTMLMediaElementEnums::VideoFullscreenModePictureInPicture); > > +#else > > + return false; > > Nit: I think it's safe to drop the "!PLATFORM(WATCHOS)" part of this if > statement. The manager should already handle that watchOS doesn't support > PiP. Right. It is removed. > > > Tools/TestWebKitAPI/Tests/WebKitCocoa/RequestTextInputContext.mm:550 > > - IPhoneUserInterfaceSwizzler userInterfaceSwizzler; > > + TestWebKitAPI::IPhoneUserInterfaceSwizzler userInterfaceSwizzler; > > This shouldn't be needed after r260469. Correct.
EWS
Comment 10 2020-04-21 18:54:18 PDT
Committed r260486: <https://trac.webkit.org/changeset/260486> All reviewed patches have been landed. Closing bug and clearing flags on attachment 397147 [details].
Note You need to log in before you can comment on or make changes to this bug.